src/components/Button/Button.module.scss
@import '../scss-partial/status-color-code';

.button {
  display: flex;
  align-items: center;
  justify-content: center;
  width: auto;
  white-space: nowrap;
  cursor: pointer;
  color: rgb(255, 255, 255);
  line-height: 24px;
  border-radius: 160px;
  border-color: rgba(0, 0, 0, 0);
  border-style: solid;
  outline: none;

  a{
    text-decoration: none;
    color: white;
  }

  &.green {
    background-color: rgb(125, 179, 67);
  }
  &.blue {
    background-color: #4c8bf5;
  }
  &.light-blue {
    color: rgb(0, 143, 180);
    border-color: rgb(231, 235, 251);
    background-color: rgb(246, 248, 253);
  }
  &.pink {
    background-color: #e0446d;
  }
  &.mint {
    background-color: #29c4c5;
  }
  &.navy {
    background-color: #426ad2;
  }
  &.red{
    background-color: rgb(231, 82, 69);
  }
  &.transparent{
    background-color: transparent;
    color:  #426ad2;
    border-color: #426ad2;
  
    &:hover{
      @extend .light-blue;
      border-color: #426ad2;
    }
  }
  
  &.transparentActive{
    background-color: #f6f8fd;
    color: #008fb4;
    border-color: rgba(41, 43, 50, .3);
  
    &:hover{
      background-color:white;
    }
  }
  
  &:disabled{
    background-color: lighten($expired-color, 25%);
    color: darken($expired-color, 10%);
    cursor: auto;
    pointer-events: none;
  }

  &.small{
    padding: 5px 10px;
    height: 27px;
    font-size: 11px;
    font-weight: 600;
    letter-spacing: .44px;
    border-width: 1px;
  }
  
  &.medium{
    padding: 8px 16px;
    font-size: 16px;
    border-width: 2px;
    letter-spacing: 0.15px;
  }
  
  &.large{
    border-width: 2px;
    padding: 16px 24px;
    font-size: 20px;
    letter-spacing: 0.15px
  }

  &.navbar{
    height: 35px;
    width: 135px;
    border-radius: 20px;
    font-size: 14px;
    font-weight: 600;
    line-height: 18px;
  }
  
  &.long{
    width: 100%;
  }
}


// ------ icon button -----
.icon_button{
  display: inline-flex;
  border: none;
  outline: none;
  margin: 0;
  text-decoration: none;
  background-color: transparent;
  font-size: 1rem;
  cursor: pointer;
  text-align: center;
  color: rgb(84, 90, 119);
}

.search_icon_wrapper{
  display: flex;
  align-items: center;
  width: 20px;
  height: 20px;
  color: rgb(170, 170, 170);

  &:hover{
    color: #008fb4;
  }
}


// ------ text button --------
.text_button{
  text-align: center;
  cursor: pointer;
  display: block;
  font-size: 13px;
  letter-spacing: .4px;
  text-decoration: none;
  border: none;
  outline: none;
  font-weight: 600;
  color: #fff;
  background-color: transparent;

  &.white{
    color: #fff;
    
    &:hover {
      opacity: 0.6;
    }
  }
  
  &.grey{
    color: #545a77;
  
    &:hover {
      color: #008fb4;
    }
  }

  &.navy{
    color: #426ad2;

    &:hover {
      color: #008fb4;
    }
  }

  &.navMobile {
    font-size: 15px;
    font-weight: 400;
    line-height: 13px;
    font-family: "Baloo Tamma 2", cursive;
    color: #313849;

    &:hover {
      color: #3ABEF9;
    }
  }
  
  &.light-blue{
    color: #008fb4;
  }
}

